--- a/libgdx2/miner/build.gradle
+++ b/libgdx2/miner/build.gradle
@@ -90,6 +90,7 @@ project(":core") {
     dependencies {
         compile "com.badlogicgames.gdx:gdx:$gdxVersion"
         compile group: 'com.google.guava', name: 'guava', version: '12.0'
+        compile group: 'com.google.auto.value', name: 'auto-value', version: '1.0-rc1'
     }
 }
 
